Update Index.cshtml  org name added

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">verison 23 webapp for CTJPA batch 1 and batch2</h1>
-    <h1 class="display-4">Nitest web app testining service ltd</h1>
+    <h1 class="display-4">verison 23 webapp for KPMG JULY batch 1 and batch2</h1>
+    <h1 class="display-4">Kavya web app testining service ltd</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
